# pkpassBuilder

./: .env.example  .gitignore  LICENSE  README.md  generar_pases.py  pyproject.toml  requirements.txt
assets/: README.md
assets/cert/: README.md
assets/img/: README.md
docs/: AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md
examples/: README.md  ejemplo_personas.json  generar_passkits.py
src/pkpass_builder/: README.md  __init__.py  generate.py
tests/: README.md
